added authorization to JSDoc and YAML based swagger documentation and in root endpoint /:number
